# rdp-poc-backend

./: .gitignore
.github/workflows/: ecr-deploy.yml
app/: Dockerfile  app.py
inference/: Dockerfile  pyproject.toml
inference/app/: main.py
infra/data-pipeline/: locals.tf  main.tf  providers.tf  variables.tf
infra/terraform/environments/dev/: data.tf  locals.tf  main.tf  outputs.tf  variables.tf
infra/terraform/modules/batch/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/datasync-s3/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/dynamodb/: main.tf  outputs.tf  variables.tf
