[project]
name = "inference"
version = "0.1.0"
package-mode = false
description = "Backend for rail defect POC"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.12.5,<3.0.0",
    "pillow>=12.0.0,<13.0.0",
    "ultralytics>=8.3.234,<9.0.0",
    "boto3>=1.34.0,<2.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1,<10.0.0",
    "httpx>=0.28.1,<0.29.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]